--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,7 +138,10 @@ jobs:
       - name: Import keys
         working-directory: ./docker/localnet
         run: |
+          pwd
+          echo $HOME
           export HOME=/home/runner
+          echo $HOME
           bash import-keys.sh
 
       - uses: actions/setup-go@v5
