--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -168,7 +168,7 @@ jobs:
   # NOTE: This job is disabled since upgrade tests from v0.6.x to v1.x.x are not needed until next major release.
   upgrade-tests:
     name: "Upgrade Tests"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
