--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -333,14 +333,14 @@ jobs:
         with:
           name: report-upgraded-integration.xml
 
-      # - name: Download pricing proposal test Report
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: report-pricing-proposal.xml
-      # - name: Download pricing change test Report
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: report-pricing-change.xml
+      - name: Download pricing proposal test Report
+        uses: actions/download-artifact@v4
+        with:
+          name: report-pricing-proposal.xml
+      - name: Download pricing change test Report
+        uses: actions/download-artifact@v4
+        with:
+          name: report-pricing-change.xml
       - name: Combine test results
         run: |
           # python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml
