--- a/.github/linters/.pylintrc
+++ b/.github/linters/.pylintrc
@@ -1,1 +1,45 @@
-disable=C0301,C0114,C0302,C0116
+[MESSAGES CONTROL]
+
+# Only show warnings with the listed confidence levels. Leave empty to show
+# all. Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE,
+# UNDEFINED.
+confidence=
+
+# Disable the message, report, category or checker with the given id(s). You
+# can either give multiple identifiers separated by comma (,) or put this
+# option multiple times (only on the command line, not in the configuration
+# file where it should appear only once). You can also use "--disable=all" to
+# disable everything first and then re-enable specific checks. For example, if
+# you want to run only the similarities checker, you can use "--disable=all
+# --enable=similarities". If you want to run only the classes checker, but have
+# no Warning level messages displayed, use "--disable=all --enable=classes
+# --disable=W".
+disable=line-too-long,
+        too-many-lines,
+        missing-module-docstring,
+        missing-function-docstring,
+        logging-fstring-interpolation,
+        consider-using-f-string,
+        too-many-branches,
+        unspecified-encoding,
+        missing-class-docstring,
+        broad-exception-caught,
+        redefined-outer-name,
+        consider-using-with,
+        inconsistent-return-statements,
+        useless-else-on-loop,
+        no-else-return,
+        too-many-return-statements,
+        subprocess-run-check,
+        too-many-statements,
+        too-many-locals,
+        too-many-public-methods,
+        too-many-instance-attributes,
+        invalid-name
+# Enable the message, report, category or checker with the given id(s). You can
+# either give multiple identifier separated by comma (,) or put this option
+# multiple time (only on the command line, not in the configuration file where
+# it should appear only once). See also the "--disable" option for examples.
+enable=
+
+
