Fix ENV linter errors && disable OPENAPI linter

--- a/docker/persistent-chains/docker-compose.env
+++ b/docker/persistent-chains/docker-compose.env
@@ -7,20 +7,19 @@
 # Needs to be changed in case of node version upgrades
 
 # Define which network you want to deploy a node
-# Change value to "testnet" if targetting testnet
-CHEQD_NETWORK="mainnet"
+# Change value to "testnet" if targeting testnet
+CHEQD_NETWORK=mainnet
 
 # Define cheqd-noded software release version
 # Current MAINNET recommended version: 0.6.7
 # Current TESTNET recommended version: 0.6.7
-DOCKER_IMAGE_VERSION="v1.0.0"
-
+DOCKER_IMAGE_VERSION=v1.0.0
 
 ###############################################################
 ###             OPTIONAL: Host-side port mappings           ###
 ###############################################################
 # Ports to be exposed on the host machine/service
-# Only required if you want to customise target->host mappings
+# Only required if you want to customize target->host mappings
 
 # Tendermint P2P
 TM_P2P_PORT=26656
@@ -46,17 +45,17 @@ COSMOS_GRPC_GATEWAY_API_PORT=9191
 
 # Define a Docker volume source
 # Default is set to the volume name referred in the docker-compose.yml file
-CHEQD_DOCKER_VOLUME_SOURCE="cheqd_volume"
+CHEQD_DOCKER_VOLUME_SOURCE=cheqd_volume
 
 # Define driver to be used for Docker volume 
 # Set to "local" for a single host, or others such as "overlay" for writing to
 # an externally available volume through volume plugins, e.g. "nfs"
 # You need to specify **driver_opts** in docker-compose.yml for your preferred driver
 # Refer to: https://docs.docker.com/engine/extend/legacy_plugins/#/volume-plugins
-CHEQD_DOCKER_VOLUME_DRIVER="local"
+CHEQD_DOCKER_VOLUME_DRIVER=local
 
 # Set to true if created externally, outside of Docker Compose
-CHEQD_DOCKER_VOLUME_IS_EXTERNAL="false"
+CHEQD_DOCKER_VOLUME_IS_EXTERNAL=false
 
 ###############################################################
 ###                 OPTIONAL: Build arguments               ###
@@ -64,7 +63,7 @@ CHEQD_DOCKER_VOLUME_IS_EXTERNAL="false"
 # Environment variables only used during BUILD process
 
 # Home directory for cheqd user inside the container
-CHEQD_HOME_DIR="/home/cheqd"
+CHEQD_HOME_DIR=/home/cheqd
 
 # Build tag when rebuilding image
-BUILD_TAG="local"
+BUILD_TAG=local
