--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -95,10 +95,11 @@ jobs:
 
         VALIDATE_BASH: true
         VALIDATE_DOCKERFILE_HADOLINT: true
+        VALIDATE_ENV: true
         VALIDATE_GITHUB_ACTIONS: true
         VALIDATE_JSON: true
         VALIDATE_MARKDOWN: true
-        VALIDATE_OPENAPI: true
+        # VALIDATE_OPENAPI: true
         VALIDATE_PYTHON_PYLINT: true
         VALIDATE_XML: true
         VALIDATE_YAML: true
