Enhanced report inclusion

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -343,7 +343,7 @@ jobs:
           name: report-pricing-change.xml
       - name: Combine test results
         run: |
-          # python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml
+          # python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml report-pre-upgrade.xml report-post-upgrade.xml report-upgraded-integration.xml report-pricing-proposal.xml report-pricing-change.xml > report.xml
         # run: |
         #   python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml > report.xml
 
