--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -164,14 +164,11 @@ jobs:
           name: report-integration.xml
           path: report-integration.xml
 
-  # NOTE: This job is disabled since upgrade tests from v0.6.x to v1.x.x are not needed until next major release.
   upgrade-tests:
     name: "Upgrade Tests"
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
-
-      # Preparations
 
       - name: Download old node binary (mainnet-latest)
         run: |
@@ -206,7 +203,6 @@ jobs:
       - name: Load node Docker image
         run: docker load -i cheqd-node-build.tar
 
-      # Run tests
       - name: Setting up network with old binary inside (mainnet version)
         working-directory: ./tests/upgrade/integration
         run: |
@@ -343,7 +339,7 @@ jobs:
           name: report-pricing-change.xml
       - name: Combine test results
         run: |
-          # python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml report-pre-upgrade.xml report-post-upgrade.xml report-upgraded-integration.xml report-pricing-proposal.xml report-pricing-change.xml > report.xml
+          python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml report-pre-upgrade.xml report-post-upgrade.xml report-upgraded-integration.xml report-pricing-proposal.xml report-pricing-change.xml > report.xml
         # run: |
         #   python ./.github/scripts/xml_combine.py report-unit.xml report-integration.xml > report.xml
 
