--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
+      - name: "Modify runner's home directory permissions"
+        run: "sudo chmod 755 /home/runner/.local"
 
       - name: "Fresh install with Cosmovisor"
         working-directory: ./installer
@@ -51,6 +54,9 @@ jobs:
       DEFAULT_DEBUG_BRANCH: ${{ github.ref_name }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: "Modify runner's home directory permissions"
+        run: "sudo chmod 755 /home/runner/.local"
 
       - name: "Fresh install"
         working-directory: ./installer
