--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: "Modify runner's home directory permissions"
-        run: "sudo chmod 755 /home/runner/.local"
+        run: "sudo chmod 755 /home/runner"
 
       - name: "Fresh install with Cosmovisor"
         working-directory: ./installer
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: "Modify runner's home directory permissions"
-        run: "sudo chmod 755 /home/runner/.local"
+        run: "sudo chmod 755 /home/runner"
 
       - name: "Fresh install"
         working-directory: ./installer
