ci: Mark release/2.x branch as pre-release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,7 +9,8 @@
         {
             "name": "release/2.x",
             "range": "2.x",
-            "channel": "2.x"
+            "channel": "2.x",
+            "prerelease": true
         },
         {
             "name": "release/1.x",
