Switch to ubuntu-latest where relevant

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   installer-cosmovisor:
     name: "Installer - Cosmovisor mode"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       PYTHONDEVMODE: 1
       DEFAULT_DEBUG_BRANCH: ${{ github.ref_name }}
@@ -44,7 +44,7 @@ jobs:
 
   installer-standalone:
     name: "Installer - Standalone mode"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       PYTHONDEVMODE: 1
       DEFAULT_DEBUG_BRANCH: ${{ github.ref_name }}
@@ -73,7 +73,7 @@ jobs:
 
   unit-tests:
     name: "Unit Tests"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -99,7 +99,7 @@ jobs:
 
   integration-tests:
     name: "Integration Tests"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -166,7 +166,7 @@ jobs:
 
   upgrade-tests:
     name: "Upgrade Tests"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -295,7 +295,7 @@ jobs:
 
   report-results:
     name: "Report"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     # NOTE: If not next major release, only unit and integration tests are necessary, otherwise all tests are needed.
     # needs: [unit-tests, integration-tests]
     needs: [unit-tests, integration-tests, upgrade-tests]
