--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
 
   build-binary:
     name: "Node binary"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -39,7 +39,7 @@ jobs:
 
   build-docker:
     name: "Docker image"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: build-binary
     env:
       IMAGE_NAME: ${{ github.repository }}
