--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
   # List of languages enabled is smaller than in lint workflow
   super-lint:
     name: "Super Linter"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
 
   release-guard:
     name: "Check release condition"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: super-lint
     outputs:
       RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
@@ -99,7 +99,7 @@ jobs:
 
   release-binary:
     name: "Node binary"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [ super-lint, release-guard ]
     # Only run if release-guard outputs EXECUTE_RELEASE=true
     if: needs.release-guard.outputs.EXECUTE_RELEASE == 'true'
@@ -139,7 +139,7 @@ jobs:
   release-docker:
     name: "Docker image"
     needs: [ super-lint, release-guard ]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     # Only run if release-guard outputs EXECUTE_RELEASE=true
     if: needs.release-guard.outputs.EXECUTE_RELEASE == 'true'
     env:
