--- a/.github/workflows/cleanup-actions.yml
+++ b/.github/workflows/cleanup-actions.yml
@@ -32,7 +32,7 @@ jobs:
   
   delete-runs:
     name: "Delete old workflow runs"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     
     steps:
       - uses: Mattraks/delete-workflow-runs@v2
