chore: Removed prefixed api where relevant

--- a/proto/buf.gen.pulsar.yaml
+++ b/proto/buf.gen.pulsar.yaml
@@ -10,6 +10,7 @@ managed:
       - buf.build/googleapis/googleapis
       - buf.build/cosmos/gogo-proto
       - buf.build/cosmos/cosmos-proto
+      - buf.build/cosmos/cosmos-sdk
 
 plugins:
   - name: go-pulsar
