--- a/docker/persistent-chains/docker-compose.env
+++ b/docker/persistent-chains/docker-compose.env
@@ -11,9 +11,7 @@
 CHEQD_NETWORK=mainnet
 
 # Define cheqd-noded software release version
-# Current MAINNET recommended version: 0.6.7
-# Current TESTNET recommended version: 0.6.7
-DOCKER_IMAGE_VERSION=v1.0.0
+DOCKER_IMAGE_VERSION=3.0.1
 
 ###############################################################
 ###             OPTIONAL: Host-side port mappings           ###
