Revert "Remove skipping identity tests"
This reverts commit 6979f91de5391b18c6df51446da6cea4c1932187.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -286,7 +286,7 @@ jobs:
       - name: Run pricing integration tests after successful param change proposal
         working-directory: ./tests/integration
         run: |
-          ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --skip-file cli_defi_test.go --junit-report ../../report-pricing-change.xml
+          ginkgo -r --tags integration --race --randomize-suites --keep-going --trace --skip-file cli_diddoc_test.go --skip-file cli_diddoc_negative_test.go --skip-file cli_resource_test.go --skip-file cli_resource_negative_test.go --skip-file cli_defi_test.go --junit-report ../../report-pricing-change.xml
 
       - name: Upload pricing change tests result
         uses: actions/upload-artifact@v4
