--- a/.github/linters/.golangci.yaml
+++ b/.github/linters/.golangci.yaml
@@ -1,14 +1,14 @@
 run:
   timeout: 10m
-
+  go: "1.23"
 
 linters:
   enable:
     - bodyclose
+    - copyloopvar
     - depguard
     - dogsled
     - errcheck
-    - exportloopref
     - goconst
     - gocritic
     - gofumpt
@@ -47,9 +47,6 @@ linters-settings:
       - regexpMust
       - badCall # Remove this after CI workflow PR
 
-  gofumpt:
-    lang-version: "1.23.0"
-
   misspell:
     ignore-words:
       - cheqd
@@ -57,8 +54,6 @@ linters-settings:
       - ncheq
 
   stylecheck:
-    # Select the Go version to target.
-    go: "1.23"
     # STxxxx checks in https://staticcheck.io/docs/configuration/options/#checks
     # Default: ["*"]
     checks: ["all"]
